# dns-updater

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: main.rs
src/config/: mod.rs
src/dns_updater/: mod.rs
src/ip_fetcher/: mod.rs
